--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -476,13 +476,13 @@ span.copyTitle {
 	font-size: 1.5rem;
 	color: #2E9EC9;
 }
-span.copyAbbr {
+/*span.copyAbbr {
 	margin-bottom: 0px;
 	font-family: sans-serif;
 	font-size: 1.4rem;
 	color: #2E9EC9;
 	direction: ltr;
-}
+}*/
 
 /**
 * This css files pertains to the HistoryView
