--- a/YourBible/www/css/BibleApp.css
+++ b/YourBible/www/css/BibleApp.css
@@ -806,6 +806,21 @@ td.rowSpace {
 	box-shadow: 4px 4px 5px #777;
 	-webkit-box-shadow: 4px 4px 5px #777;
 }
+/** RateMeView **/
+#ratebtn {
+	margin-top: 24px;
+	margin-bottom: 24px;
+	background: #2E9EC9;
+  	background-image: linear-gradient(to bottom, #2E9EC9, #2980b9);
+	-webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	font-family: sans-serif;
+	color: #ffffff;
+	font-size: 1.0rem;
+	padding: 10px 30px 10px 30px;
+	text-decoration: none;
+}
 
 /* Font Color Control */
 /* Keep as example of toggle control */
