--- a/YourBible/www/css/BibleApp.css
+++ b/YourBible/www/css/BibleApp.css
@@ -948,12 +948,10 @@ button.versIcon {
 	border: none; 
 	background-color: #EEEEEE; /* same as table.vers */
 }
-html {
-	font-size: 12pt; /* temporary for VideoModule */
-}
-body {
+#videoRoot {
+    position: absolute; /* Needed because settingRoot.style.y is set in AppControllerView */
 	background-color: white;
-	width: 100%;
+	width: 100%;	
 }
 table.videoList {
     border-spacing: 20px;
@@ -975,7 +973,7 @@ div.videoList {
 }
 p.videoListTitle {
 	font-family: sans-serif;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	text-transform: none;
 	text-align: center;
 	margin-top: 15px;
