--- a/YourBible/www/css/BibleApp.css
+++ b/YourBible/www/css/BibleApp.css
@@ -951,12 +951,12 @@ button.versIcon {
 #videoRoot {
     position: absolute; /* Needed because settingRoot.style.y is set in AppControllerView */
 	background-color: white;
-	width: 100%;	
+	/*width: 100%;	*/
 }
 table.videoList {
     border-spacing: 20px;
 	background-color: white;
-	width: 100%;
+	/*width: 100%;*/
 }
 tr.videoList {
 
