--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -951,6 +951,7 @@ button.versIcon {
 #videoRoot {
     position: absolute; /* Needed because settingRoot.style.y is set in AppControllerView */
 	background-color: white;
+	z-index: 20;
 	/*width: 100%; must be set explicity in VideoListView */
 }
 table.videoList {
