Settings Bookmark locations identified, and icon inserted on selection

--- a/Plugins/Settings/Settings_ios/Settings/www/BibleApp2.css
+++ b/Plugins/Settings/Settings_ios/Settings/www/BibleApp2.css
@@ -236,6 +236,10 @@ header .location,
 }
 */
 
+img.bookmark {
+    padding-right: 5px;
+}
+
 /* document */
 .section-document .name,
 .section-document .location {
