--- a/SafeBible2/SafeBible_ios/SafeBible/www/Codex.css
+++ b/SafeBible2/SafeBible_ios/SafeBible/www/Codex.css
@@ -1,7 +1,8 @@
 /**
  * This css files pertains to the CodexView
  */
-#codexRoot {
+/*#codexRoot {*/
+section {
     position: absolute; /* Needed because codexRoot.style.y is set in CodexView */
     width: 86%;
     margin-left: 8%;
@@ -13,6 +14,17 @@
     text-align: start;
     z-index: 0;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    font-size: 1.0rem; /* 16pt */
+}
+
 /* Paged Layout */
 /*body {// not working
  page: auto;
