--- a/SafeBible2/SafeBible_ios/SafeBible/www/DBP_FCBH.css
+++ b/SafeBible2/SafeBible_ios/SafeBible/www/DBP_FCBH.css
@@ -39,224 +39,6 @@ a {
     text-align: center;
 }
 
-/* GNG remove 11/11/18, replaced by .header .footer display: none
-.header,
-header,
-.footer,
-footer {
-  height: 50px;
-  padding: 10px;
-  background: #333;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-family: Avenir, Helvetica;
-}
-
-.header,
-header {
-  position: relative;
-}
-
-.header a,
-header a,
-.footer a,
-footer a {
-  color: #fff;
-}
-
-header .prev,
-header .next,
-header .home,
-footer .home,
-footer .prev,
-footer .next,
-.header .prev,
-.header .next,
-.header .home,
-.footer .home,
-.footer .prev,
-.footer .next {
-  font-family: Arial;
-  position: absolute;
-  width: 40px;
-  height: 50px;
-  display: block;
-  font-size: 30px;
-  padding-top: 4px;
-  z-index: 1;
-  text-indent: -9999px;
-  background: transparent url(mobile.png) 0 0 no-repeat;
-}
-
-header .home,
-footer .home,
-.header .home,
-.footer .home {
-  top: 0;
-  left: 0;
-  width: 50px;
-  background-position-y: -100px;
-}
-
-header .prev,
-footer .prev,
-.header .prev,
-.footer .prev {
-  width: 45px;
-  top: 0;
-  right: 45px;
-  padding: 8px;
-  background-position-y: -50px;
-}
-
-header .next,
-footer .next,
-.header .next,
-.footer .next {
-  width: 40px;
-  top: 0;
-  right: 5px;
-  padding: 8px;
-}
-
-[dir=rtl] header .prev,
-[dir=rtl] footer .prev,
-[dir=rtl] .header .prev,
-[dir=rtl] .footer .prev {
-  right: auto;
-  left: 5px;
-}
-
-[dir=rtl] header .next,
-[dir=rtl] footer .next,
-[dir=rtl] .header .next,
-[dir=rtl] .footer .next {
-  right: auto;
-  left: 45px;
-}
-
-[dir=rtl] header .home,
-[dir=rtl] footer .home,
-[dir=rtl] .header .home,
-[dir=rtl] .footer .home {
-  left: auto;
-  right: 5px;
-}
-
-header .name,
-.header .name {
-  position: absolute;
-  top: 8px;
-  left: 0;
-  width: 100%;
-  font-size: 0.75rem;
-  text-align: center;
-  color: #eee;
-}
-
-header .location,
-.header .location {
-  position: absolute;
-  bottom: 8px;
-  left: 0;
-  width: 100%;
-  font-size: 14px;
-  text-align: center;
-  color: #fff;
-}
-*/
-
-/* GNG Removed 11/11/18 These appear to apply only to index pages
-.texts-index .name {
-  font-size: 0.875rem;
-  padding-top: 5px;
-  display: block;
-}
-
-.texts-index-list {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.texts-index-list td,
-.texts-index-list th {
-  padding: 5px;
-  vertical-align: top;
-}
-
-.texts-index-list tr th {
-  font-weight: bold;
-  text-align: right;
-  padding-right: 10px;
-}
-
-.texts-index-list tr td {
-}
-
-.texts-index-list tr:hover {
-  background-color: #ccc;
-}
-
-.texts-index-list .texts-index-header th {
-  background-color: #2a85e8;
-  color: #fff;
-  text-align: center;
-}
-
-.text-index .name {
-  font-size: 0.875rem;
-  padding-top: 5px;
-  display: block;
-}
-
-.division-index .name {
-  font-size: 0.875rem;
-  padding-top: 5px;
-  display: block;
-}
-
-.division-list li {
-  border-bottom: 1px solid #ddd;
-}
-
-.division-list li a {
-  display: block;
-  padding: 8px;
-}
-
-.division-list li:hover {
-  background-color: #ccc;
-}
-
-.division-list li.division-list-header {
-  background-color: #2a85e8;
-  color: #fff;
-  text-align: center;
-  padding: 5px;
-}
-
-.section-list li {
-  border-bottom: 1px solid #ddd;
-}
-
-.section-list li a {
-  display: block;
-  padding: 5px;
-}
-
-.section-list li:hover {
-  background-color: #ccc;
-}
-
-.section-list li.book-list-header {
-  background-color: #2a85e8;
-  color: #fff;
-  text-align: center;
-  padding: 5px;
-}
-*/
-
 img.bookmark {
     padding-right: 5px;
 }
@@ -269,40 +51,10 @@ img.bookmark {
 
 .section {
   padding: 20px;
-  font-size: 0.875rem;
+  /* font-size: 0.875rem; GNG removed 2/19/19 */
   font-family: Cambria, Times;
 }
-/* GNG Removed 1/3/19
-.footnotes {
-  margin: 1.0rem; /* 1em
-  border-top: 1px solid #666;
-  padding-top: 1.0rem; /* 1em
-  font-size: 0.8rem; /* .8em
-}
 
-.footnotes .footnote {
-  margin-bottom: 1.0rem; /* 1em
-  padding-left: 1.1rem; /* 1.1em
-  position: relative;
-  display: block;
-}
-
-.footnotes .footnote .key {
-  position: absolute;
-  top: 0.25rem; /* .25em
-  left: 0;
-  width: 10px;
-  font-size: 0.6rem; /* .6em
-  display: block;
-  text-align: right;
-}
-
-.footnotes .footnote .backref {
-  color: #2a85e8;
-  display: inline-block;
-  padding-right: 0.5rem; /* .5em 
-}
-*/
 /* GNG Added 11/11/18, because footnote data appeared incomplete */
 div.footnotes {
     display: none;
@@ -331,15 +83,6 @@ span.note {
   font-style: normal;
 }
 
-/* book name */
-/*
-.mt {
-display: block;
-text-align: center;
-font-size: 2em;
-margin: 1.2em 0;
-}
-  */
 /* main bible verse, text formatting */
 .section,
 .chapter {
