--- a/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
+++ b/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
@@ -1,19 +1,3 @@
-/**
- * This css files pertains to the CodexView
- */
-/*#codexRoot {*/
-section {
-    position: absolute; /* Needed because codexRoot.style.y is set in CodexView */
-    width: 86%;
-    margin-left: 8%;
-    margin-right: 6%;
-    font-family: serif;
-    font-size: 1.0rem; /* 14pt std */
-    color: #000000;
-    line-height: 1.3; /* non-std */
-    text-align: start;
-    z-index: 0;
-}
 * {
     margin: 0;
     padding: 0;
@@ -25,21 +9,22 @@ body {
     font-size: 1.0rem; /* 16pt */
 }
 
-/* Paged Layout */
-/*body {// not working
- page: auto;
- break-before: avoid-page;
- orphans: 2;
- widows: 2;
- column-count: 3;
- column-gap: 2.5%;
- }*/
-/* remove scrollbars, ideally only for #codexRoot
- but, I have only been able to do it for all. */
-/* scrollbars are absent without this 1/21/2016 */
-/*::-webkit-scrollbar {
- display: none;
- }*/
+body {
+    font-family: Cambria, Times;
+    line-height: 1.8;
+    padding-left: 5%; /* padding changed from 20px, GNG 2/19/19 */
+    padding-top: 5%;
+    padding-right: 3%;
+    padding-bottom: 5%;
+    
+}
+
+/* Affects notes and bookmarks */
+a {
+    text-decoration: none;
+    /* color: #333; GNG removed 1/3/19 */
+}
+
 /* article element is at beginning of each book */
 article { /* non-std */
     margin-bottom: 1.0in;
