--- a/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
+++ b/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
@@ -25,6 +25,18 @@ a {
     /* color: #333; GNG removed 1/3/19 */
 }
 
+/* chapter number */
+p.c {
+    float: left;
+    font-size: 2.0rem; /* 2em */
+    line-height: 1;
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 0.3rem; /* .2em */
+    font-family: avenir, helvetica;
+}
+
 /* article element is at beginning of each book */
 article { /* non-std */
     margin-bottom: 1.0in;
@@ -84,13 +96,13 @@ p.ipi {
     color: #777777; /* non std */
 }
 /* line 344, Chapter Number Format */
-p.c {
+/*p.c {
     font-size: 1.5rem;
     color: #2A48B4; /* non-std */
-    text-align: start;
+    /*text-align: start;
     margin-top: 8pt;
     margin-bottom: 4pt;
-}
+}*/
 /* p.cl Chapter Label is not yet supported
  the p.cl appears once at the beginning of Psalms
  and needs to be repeated with each chapter.
