--- a/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
+++ b/SafeBible2/SafeBible_ios/SafeBible/www/ShortSands.css
@@ -25,6 +25,18 @@ a {
     /* color: #333; GNG removed 1/3/19 */
 }
 
+/* book name */
+div.bookname {
+    pointer-events: none;
+    cursor: default;
+    display: block;
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: #777;
+    text-align: center;
+}
+
 /* chapter number */
 p.c {
     float: left;
